[package]
name = "rust-libccurl"
version = "0.1.0"
authors = ["m2Lower"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"

[profile.release]
#debug = true

[features]
# no features by default
default = []

# for debug print
debug-print = []